# EdgePilot---Adaptive-AI-Workload-Orchestrator

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  CMakeLists.txt  EVALUATION.md  LICENSE  LOCAL_AI_VERIFICATION.md  PRIVACY_AND_SAFETY.md  README.md  TECHNICAL_REPORT.md  edgepilot_benchmark_telemetry.csv  edgepilot_telemetry.csv  edgepilot_telemetry.db  requirements.txt  run_edgepilot.bat
api/: __init__.py  app.py  main.py  schemas.py
api/dashboard/: app.js  index.html  style.css
build_mingw/: CTestTestfile.cmake
build_mingw/tests/: CTestTestfile.cmake
core/: CMakeLists.txt  README.md  devlog_v.md
core/include/edgepilot/: ai_scheduler.h  job_queue.h  lifecycle_manager.h  llama_cpp_adapter.h  model_registry.h  onnx_runtime_adapter.h  orchestrator.h  pipeline_executor.h  quantization_manager.h  runtime_interface.h  runtime_registry.h  scheduler_interface.h  telemetry_collector.h  types.h  worker_pool.h
core/src/: ai_scheduler.cpp  job_queue.cpp  lifecycle_manager.cpp  llama_cpp_adapter.cpp  model_registry.cpp  onnx_runtime_adapter.cpp  orchestrator.cpp  pipeline_executor.cpp  quantization_manager.cpp  runtime_registry.cpp  telemetry_collector.cpp  worker_pool.cpp
learning/: characterizer.py  telemetry_db.py  train_predictors.py  train_rl_scheduler.py
sdk/cpp/: edgepilot_client.h
sdk/java/: EdgePilotClient.java
sdk/python/: edgepilot.py
tests/: CMakeLists.txt  benchmark_framework.cpp  main_orchestrator.cpp  test_model_layer.cpp  test_runtime_layer.cpp  verify_runtime.py
